fixed Select component dropdown z-index

--- a/src/assets/admin/components/select/editor.scss
+++ b/src/assets/admin/components/select/editor.scss
@@ -1,8 +1,6 @@
 @import "../../variables";
 
 .lazyblocks-component-select {
-    z-index: 2;
-
     input[type="text"] {
         min-height: 20px;
 
